testdata/baselines/reference/submodule/compiler/missingCloseParenStatements(alwaysstrict=true).errors.txt
error TS-1: Pre-emit (5) and post-emit (6) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
missingCloseParenStatements.ts(2,26): error TS1005: ')' expected.
missingCloseParenStatements.ts(4,5): error TS1005: ')' expected.
missingCloseParenStatements.ts(8,13): error TS1101: 'with' statements are not allowed in strict mode.
missingCloseParenStatements.ts(8,39): error TS1005: ')' expected.
missingCloseParenStatements.ts(11,35): error TS1005: ')' expected.


!!! error TS-1: Pre-emit (5) and post-emit (6) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
!!! related TS-1: The excess diagnostics are:
!!! related TS2304 missingCloseParenStatements.ts:9:29: Cannot find name 'x'.
==== missingCloseParenStatements.ts (5 errors) ====
    var a1, a2, a3 = 0;
    if ( a1 && (a2 + a3 > 0) {
                             ~
!!! error TS1005: ')' expected.
!!! related TS1007 missingCloseParenStatements.ts:2:4: The parser expected to find a ')' to match the '(' token here.
        while( (a2 > 0) && a1
        {
        ~
!!! error TS1005: ')' expected.
!!! related TS1007 missingCloseParenStatements.ts:3:10: The parser expected to find a ')' to match the '(' token here.
            do {
                var i = i + 1;
                a1 = a1 + i;
                with ((a2 + a3 > 0) && a1 {
                ~~~~
!!! error TS1101: 'with' statements are not allowed in strict mode.
                                          ~
!!! error TS1005: ')' expected.
!!! related TS1007 missingCloseParenStatements.ts:8:18: The parser expected to find a ')' to match the '(' token here.
                    console.log(x);
                  }
            } while (i < 5 && (a1 > 5);
                                      ~
!!! error TS1005: ')' expected.
!!! related TS1007 missingCloseParenStatements.ts:11:17: The parser expected to find a ')' to match the '(' token here.
        }
    }